--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -353,9 +353,9 @@
                                         <span class="material-symbols-outlined">block</span>
                                         <span data-i18n="ActionBlock">Block & Report</span>
                                     </button>
-                                    <button class="btn-secondary" id="quarantineBtn">
-                                        <span class="material-symbols-outlined">science</span>
-                                        <span data-i18n="ActionQuarantine">Quarantine in Sandbox</span>
+                                    <button class="btn-secondary" id="exportReportBtn">
+                                        <span class="material-symbols-outlined">download</span>
+                                        <span data-i18n="ActionExport">Export Report</span>
                                     </button>
                                 </div>
 
