feat: Add `data-i18n` attributes to various HTML elements and update string resources for internationalization.

--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -186,11 +186,11 @@
                                 </div>
 
                                 <h1 class="hero-title">
-                                    Secure. Offline.<br />
-                                    <span class="gradient-text">Explainable Defence.</span>
+                                    <span data-i18n="HeroTagline">Secure. Offline.</span><br />
+                                    <span class="gradient-text" data-i18n="HeroTagline2">Explainable Defence.</span>
                                 </h1>
 
-                                <p class="hero-description">
+                                <p class="hero-description" data-i18n="HeroDescription">
                                     QR-SHIELD analyses potential threats directly on your hardware. Experience
                                     <strong>zero-latency phishing detection</strong>
                                     without compromising data privacy.
