--- a/webApp/src/jsMain/resources/export.html
+++ b/webApp/src/jsMain/resources/export.html
@@ -78,40 +78,40 @@
             </div>
 
             <nav class="sidebar-nav">
-                <div class="nav-section-label">Overview</div>
+                <div class="nav-section-label" data-i18n="SectionOverview">Overview</div>
                 <a class="nav-link" href="dashboard.html" id="nav-dashboard">
                     <span class="material-symbols-outlined">dashboard</span>
-                    <span>Dashboard</span>
+                    <span data-i18n="NavDashboard">Dashboard</span>
                 </a>
                 <a class="nav-link" href="scanner.html" id="nav-scanner">
                     <span class="material-symbols-outlined">qr_code_scanner</span>
-                    <span>Live Scanner</span>
+                    <span data-i18n="NavScanMonitor">Live Scanner</span>
                 </a>
                 <a class="nav-link" href="threat.html" id="nav-history">
                     <span class="material-symbols-outlined">history</span>
-                    <span>Scan History</span>
+                    <span data-i18n="NavScanHistory">Scan History</span>
                 </a>
 
-                <div class="nav-section-label">Security</div>
+                <div class="nav-section-label" data-i18n="SectionSecurity">Security</div>
                 <a class="nav-link" href="trust.html" id="nav-allowlist">
                     <span class="material-symbols-outlined">verified_user</span>
-                    <span>Allow List</span>
+                    <span data-i18n="NavTrustCentre">Allow List</span>
                 </a>
                 <a class="nav-link" href="onboarding.html" id="nav-settings">
                     <span class="material-symbols-outlined">settings</span>
-                    <span>Settings</span>
+                    <span data-i18n="NavSettings">Settings</span>
                 </a>
 
-                <div class="nav-section-label">Training</div>
+                <div class="nav-section-label" data-i18n="SectionTraining">Training</div>
                 <a class="nav-link" href="game.html" id="nav-game">
                     <span class="material-symbols-outlined">sports_esports</span>
-                    <span>Beat the Bot</span>
+                    <span data-i18n="NavTraining">Beat the Bot</span>
                 </a>
 
-                <div class="nav-section-label">Reports</div>
+                <div class="nav-section-label" data-i18n="SectionReports">Reports</div>
                 <a class="nav-link active" href="export.html" id="nav-export">
                     <span class="material-symbols-outlined filled">file_upload</span>
-                    <span>Export</span>
+                    <span data-i18n="NavReports">Export</span>
                 </a>
             </nav>
 
