--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -78,7 +78,7 @@
 
             <!-- Navigation -->
             <nav class="sidebar-nav">
-                <div class="nav-section-label">Overview</div>
+                <div class="nav-section-label" data-i18n="SectionOverview">Overview</div>
                 <a class="nav-link" href="dashboard.html" id="nav-dashboard">
                     <span class="material-symbols-outlined">dashboard</span>
                     <span data-i18n="NavDashboard">Dashboard</span>
@@ -92,7 +92,7 @@
                     <span data-i18n="NavScanHistory">Scan History</span>
                 </a>
 
-                <div class="nav-section-label">Security</div>
+                <div class="nav-section-label" data-i18n="SectionSecurity">Security</div>
                 <a class="nav-link" href="trust.html" id="nav-allowlist">
                     <span class="material-symbols-outlined">verified_user</span>
                     <span data-i18n="NavTrustCentre">Allow List</span>
@@ -102,13 +102,13 @@
                     <span data-i18n="NavSettings">Settings</span>
                 </a>
 
-                <div class="nav-section-label">Training</div>
+                <div class="nav-section-label" data-i18n="SectionTraining">Training</div>
                 <a class="nav-link" href="game.html" id="nav-game">
                     <span class="material-symbols-outlined">sports_esports</span>
                     <span data-i18n="NavTraining">Beat the Bot</span>
                 </a>
 
-                <div class="nav-section-label">Reports</div>
+                <div class="nav-section-label" data-i18n="SectionReports">Reports</div>
                 <a class="nav-link" href="export.html" id="nav-export">
                     <span class="material-symbols-outlined">download</span>
                     <span data-i18n="NavReports">Export</span>
